--- a/index.html
+++ b/index.html
@@ -895,5 +895,13 @@
         <script src="plugins/js/jquery-1.7.2.min.js" type="text/javascript"></script>
         <script src="plugins/js/easing.js" type="text/javascript"></script>
         <script src="plugins/js/jquery.ui.totop.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            $(document).ready(function(){
+            $().UItoTop({easingType:'easeOutQuart'});
+            });
+            setTimeout(function(){
+            location.reload();
+            }, 300000);
+        </script>
     </body>
 </html>
